--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,12 @@
-//
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+@import 'partials/_variables';
+@import 'partials/_main';
+@import 'partials/_header';
+@import 'partials/_footer';
+@import 'partials/_common';
+
 $bgColor: lightblue;
 
 body{
