--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,53 @@
 @import url(https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap);
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+header {
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0%;
+  margin: 0%;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+a {
+  -webkit-text-decoration: black;
+          text-decoration: black;
+}
+
+.list-inline {
+  list-style: none;
+}
+.list-inline li {
+  display: inline-block;
+  padding: 20px 10px;
+  margin: 0px 10px;
+}
+.list-inline li.active {
+  background-color: #B2E5FC;
+}
+.list-inline li:hover {
+  background-color: white;
+}
+.list-inline li a {
+  color: black;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.container {
+  width: 70%;
+  margin: 0% auto;
+}
+
 body {
   background-color: lightblue;
 }
