--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,55 @@
 @import url(https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap);
-.cards {
+main {
+  padding: 50px 100px;
+  background-image: url("../img/fondo-pag-speciali.jpg");
+  background-repeat: repeat;
+  background-size: cover;
+}
+main h2 {
+  margin-top: 10px;
+  margin-left: 5px;
+  color: #093477;
+}
+main .cards {
   display: flex;
   flex-wrap: wrap;
 }
+main .cards .card {
+  width: calc(100% / 3 - 10px);
+  margin: 5px;
+  position: relative;
+}
+main .cards .card .layover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(9, 52, 119, 0.6);
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+main .cards .card img {
+  width: 100%;
+  display: block;
+}
+main .cards .card:hover .layover {
+  opacity: 1;
+  cursor: pointer;
+}
 
 header {
+  text-align: center;
+  padding-top: 30px;
+}
+
+footer {
   text-align: center;
 }
 
@@ -41,11 +86,6 @@ a {
   color: black;
   font-size: 24px;
   font-weight: 700;
-}
-
-.container {
-  width: 70%;
-  margin: 0% auto;
 }
 
 body {
