--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,6 +50,9 @@ header {
 }
 
 footer {
+  width: 100%;
+  height: 800px;
+  background-image: url("../img/footer-montagne-bottom.jpg");
   text-align: center;
 }
 
